min-width removed and vw queries added to fix zoom, better wording overflow fix

--- a/html/index.css
+++ b/html/index.css
@@ -265,3 +265,29 @@ li {
         flex-direction: column;
     }
 }
+
+@media (max-width: 800px) {
+    :root {
+        --padding: 5vw;
+    }
+
+    h1 {
+        margin: unset !important;
+    }
+
+    #team {
+        min-height: unset;
+    }
+
+    #secrets img {
+        width: 25vw;
+    }
+
+    #links {
+        gap: 5vw;
+    }
+
+    #links img {
+        width: 5vw;
+    }
+}
