--- a/media/web/template.css
+++ b/media/web/template.css
@@ -32,10 +32,6 @@
     color: var(--darker-yellow);
 }
 
-html {
-    min-width: fit-content;
-}
-
 body {
     margin: 3rem;
 
@@ -324,5 +320,40 @@ input:checked+.slider:before {
         height: 1.5rem;
 
         margin: .4rem 0 0 1rem;
+    }
+}
+
+@media (max-width: 800px) {
+    #navigator a {
+        font-size: 5vw;
+    }
+
+    h1 {
+        font-size: 12vw;
+    }
+
+    h2 {
+        font-size: 10vw;
+    }
+
+    h3 {
+        font-size: 8vw;
+    }
+
+    h4 {
+        font-size: 7vw;
+    }
+
+    h5 {
+        font-size: 6vw;
+    }
+
+    h6 {
+        font-size: 5vw;
+    }
+
+    p, b, a, i, li,
+    select, button, input, textarea, span {
+        font-size: 4vw !important;
     }
 }
